--- a/service-frontend/src/index.html
+++ b/service-frontend/src/index.html
@@ -3,9 +3,21 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Task List App</title>
   </head>
-  <body>
-    <app-root></app-root>
+  <body class="bg-light">
+    <div class="container">
+      <app-root></app-root>
+      <footer class="my-5 pt-5 text-muted text-center text-small">
+          <p class="mb-1">&copy; 2018 Wouter Devinck</p>
+          <ul class="list-inline">
+            <li class="list-inline-item"><a href="https://github.com/wouterdevinck/microservices-demo">Source code</a></li>
+            <li class="list-inline-item">-</li>
+            <li class="list-inline-item"><a href="https://www.apache.org/licenses/LICENSE-2.0">License</a></li>
+          </ul>
+        </footer>
+    </div>
   </body>
 </html>
